--- a/css/estilo.css
+++ b/css/estilo.css
@@ -5,9 +5,224 @@ body{
 }
 
 a{
-    transition: color .2s linear;
+    transition: color .2s linear, border .2s linear;
     text-decoration: none;
     border-bottom: 1px dotted;
+    color: #49bf9d;
+}
+
+a:hover{
+    border-bottom: transparent;
+}
+
+p{
+    margin: 0 0 2em;
+}
+
+img{
+    max-width: 100%;
+}
+
+h1, h2, h3, h4, h5, h6{
+    color: #787878;
+    margin: 1em 0;
+}
+
+h1{
+    font-size: 36px; 
+}
+
+h2{
+    font-size: 30px;
+}
+
+h3{
+    font-size: 26px;
+}
+
+h4{
+    font-size: 22px;
+}
+
+h5{
+    font-size: 18px;
+}
+
+h6{
+    font-size: 15px;
+}
+
+sub, sup{
+    font-size: 12px;
+}
+
+blockquote{
+    border-left: 5px solid #efefef;
+    margin: 2em 0;
+    padding: .5em 0 .5em 1.5em;
+}
+
+code{
+    background: #f7f7f7;
+    border-radius: .35em;
+    border: 2px solid #efefef;
+    font-size: .9em;
+    padding: .25em .65em;
+    font-family: "courier new", monospace;
+    color: #929292;
+}
+
+pre code{
+    display: block;
+}
+
+ul, ol{
+    margin: 0;
+    padding: 0;
+    padding-left: 1.1em;
+}
+
+li{
+   padding-left: .5em; 
+}
+
+.ul-alternate{
+    list-style-type: none;
+    padding-left: 0;
+}
+
+.ul-alternate li{
+    border-bottom: 3px solid #ebe9e9;
+    padding-left: 0;
+}
+
+.ul-alternate li:last-child{
+    border-bottom: 0;
+}
+
+.ul-icons{
+    list-style-type: none;
+    padding-left: 0;
+}
+
+.ul-icons li{
+    display: inline-block;
+    font-size: 1.5em;
+    color: #49bf9d;
+    padding-left: 0;
+    padding-right: 15px;
+}
+
+.ordered-icon{
+    padding: 0 30px;
+}
+
+.icon{
+    margin-top: 50px;
+}
+
+input, label, textarea, select{
+    display: inline-block;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+input, textarea, select{
+    background: #edecec;
+    padding: 15px;
+    border-radius: 5px;
+    border: 2px solid transparent;
+    margin-bottom: 15px;
+}
+
+input[type="radio"], input[type="checkbox"]{
+    width: auto;
+    margin-right: 5px;
+}
+
+input:focus, textarea:focus{
+    border: 2px solid #49bf9d;
+    outline: none;
+}
+
+textarea{
+    height: 10em;
+}
+
+.button-default{
+    background-color: #49bf9d;
+    border: 2px solid #49bf9d;
+    color: white;
+    padding: .70em 3em;
+    border-radius: 5px;
+    font-size: .8em;
+    display: inline-block;
+    margin-bottom: .3em;
+    width: auto;
+}
+
+.button-default-stroke{
+    background-color: white;
+    border-color: #efefef;
+    color: inherit;
+}
+
+.button-default-stroke:hover{
+    border: 2px solid #49bf9d; 
+    transition: border .1s linear;
+}
+
+.button-default-small{
+    font-size: .65em;
+}
+
+.button-default-big{
+    font-size: 1em;
+}
+
+.button-default-full{
+    display: block;
+    text-align: center;
+    margin-bottom: .3em;
+}
+
+.imagem-link{
+    border: 0;
+}
+
+.table{
+    width: 100%;
+    margin: 0 0 2em 0;
+    border-collapse: collapse;
+    text-align: left;
+}
+
+.table td{
+    padding: .7em;
+}
+
+.table th{
+   padding: .75em; 
+}
+
+.table tbody tr:first-child td{
+    border-top: 3px solid #f2eeee;  
+}
+
+.table tbody tr:last-child td{
+    border-bottom: 3px solid #f2eeee;
+}
+
+.table tbody tr td{
+    border-bottom: 2px solid #f8f3f3;
+}
+
+.table tbody tr:nth-child(odd) td{
+    background: #fdfbfb;
+}
+
+.table-alternate tbody td, .table-alternate tbody tr:first-child td, .table-alternate tbody tr:last-child td{
+    border: 1px solid #ddd;
 }
 
 .main-header{
@@ -52,3 +267,65 @@ a{
     box-sizing: border-box;
 }
 
+.main-header-link img{
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.recent-works-card img{
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.gallery-image img{
+    width: 100%;
+}
+
+.gallery-thumbs img, .gallery-image img{
+    margin-bottom: 2%;
+    display: inline-block;
+    border-radius: 5px;
+}
+
+/* Grid */
+
+.row{
+    overflow: auto;
+}
+
+.col-2{
+    width: 48.5%;
+    float: left;
+}
+
+.col-2:first-child{
+    margin-right: 1.5%;
+}
+
+.col-2:last-child{
+    margin-left: 1.5%;
+}
+
+.col-2-3{
+    width: 65%;
+    float: left; 
+}
+
+.col-1-3{
+    width: 32%;
+    float: left;
+}
+
+.col-1-3:nth-child(3n - 1){
+    margin: 0 2%;
+}
+
+.img-avatar{
+    float: left;
+    padding-right: 15px;
+}
+
+.img-avatar-2{
+    float: left;
+    padding-right: 15px;
+}
