--- a/css/estilo.css
+++ b/css/estilo.css
@@ -4,6 +4,11 @@ body{
     line-height: 1.4;
 }
 
+.link-title{
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 20px;
+}
+
 a{
     transition: color .2s linear, border .2s linear;
     text-decoration: none;
@@ -62,6 +67,10 @@ blockquote{
     padding: .5em 0 .5em 1.5em;
 }
 
+blockquote p{
+    margin-bottom: 0;
+}
+
 code{
     background: #f7f7f7;
     border-radius: .35em;
@@ -84,6 +93,13 @@ ul, ol{
 
 li{
    padding-left: .5em; 
+}
+
+.icon-hiden{
+    width: 0;
+    height: 0;
+    overflow: hidden;
+    display: block;
 }
 
 .ul-alternate{
@@ -151,25 +167,37 @@ textarea{
 
 .button-default{
     background-color: #49bf9d;
-    border: 2px solid #49bf9d;
+    border: 3px solid #49bf9d;
     color: white;
-    padding: .70em 3em;
+    padding: .7em 3em;
     border-radius: 5px;
     font-size: .8em;
     display: inline-block;
-    margin-bottom: .3em;
+    margin-bottom: 0.3em;
     width: auto;
+    transition: all .5s;
+    cursor: pointer;
+}
+
+.button-default:hover{
+    background-color: #63cbad;
+    border-color: transparent;
+    margin-bottom: 0.3em;
+    border: 3px solid transparent;
 }
 
 .button-default-stroke{
     background-color: white;
     border-color: #efefef;
     color: inherit;
+    margin-bottom: 0.3em;
 }
 
 .button-default-stroke:hover{
-    border: 2px solid #49bf9d; 
-    transition: border .1s linear;
+    border: 3px solid #49bf9d;
+    color: #49bf9d;
+    background-color: white;
+    margin-bottom: 0.3em;
 }
 
 .button-default-small{
@@ -184,6 +212,37 @@ textarea{
     display: block;
     text-align: center;
     margin-bottom: .3em;
+}
+
+.button-default button-special{
+    padding: 20px;
+    background: #49bf9d;
+}
+
+.button-default-fit{
+    width: 45%;
+    display: inline-block;
+    margin-right: 1%; 
+    margin-bottom: 3em;
+    padding: 10px;
+}
+
+.button-default button-default-fit button-default-stroke{
+    width: 45%;
+    display: inline-block;
+    margin-right: 1%;
+    margin-bottom: 3em;
+}
+
+.button-default-hidden{
+    background-color: #ccc;
+    border: 3px solid #ccc;
+    color: #1f1e1e;
+    margin-bottom: 3em;
+}
+
+.button-default-hidden:hover{
+    background: #e2dede;
 }
 
 .imagem-link{
@@ -287,6 +346,33 @@ textarea{
     border-radius: 5px;
 }
 
+.main-footer{
+    position: fixed;
+    bottom: 100px;
+    width: 35%;
+    left: 0;    
+    padding: 0 54px 0 0;
+    box-sizing: border-box;
+    text-align: right;
+    color: rgba(255, 255, 255, 0.3);
+}
+
+.copyright li{
+    display: inline-block;
+}
+
+.main-footer .ul-icons li{
+    color: rgba(255, 255, 255, 0.4);
+}
+
+.copyright a{
+    color: rgba(255, 255, 255, 0.5);
+}
+
+.copyright a:hover{
+    color: #49bf9d;
+}
+
 /* Grid */
 
 .row{
@@ -307,7 +393,7 @@ textarea{
 }
 
 .col-2-3{
-    width: 65%;
+    width: 66%;
     float: left; 
 }
 
@@ -316,16 +402,33 @@ textarea{
     float: left;
 }
 
-.col-1-3:nth-child(3n - 1){
-    margin: 0 2%;
+.col-1-3:nth-child(3n - 2){
+    margin-right: 2%;
+}
+
+.col-1-3:nth-child(3n){
+    margin-left: 2%;
+}
+
+.col-2-3 + .col-1-3, .col-1-3 + .col-2-3{
+    margin-left: 2%;
+}
+
+.last-text p{
 }
 
 .img-avatar{
     float: left;
-    padding-right: 15px;
+    padding-right: 0px;
+    border-radius: 5px;
+    height: 100%;
+    margin-right: 17px;
 }
 
 .img-avatar-2{
     float: left;
-    padding-right: 15px;
+    padding-right: 0px;
+    border-radius: 5px;
+    margin-right: 17px;
+    
 }
